@@ -9,6 +9,7 @@ import test.SimpleBaseTest;
 import test.guice.issue2343.Person;
 import test.guice.issue2343.SampleA;
 import test.guice.issue2343.SampleB;
+import test.guice.issue2355.AnotherParentModule;
 import test.guice.issue2343.modules.ParentModule;
 
 public class GuiceTest extends SimpleBaseTest {
@@ -45,6 +46,17 @@ public class GuiceTest extends SimpleBaseTest {
     suite.setParentModule(ParentModule.class.getCanonicalName());
     TestNG testng = create(suite);
     testng.run();
+    assertThat(Person.counter).isEqualTo(1);
+  }
+
+  @Test(description = "GITHUB-2355")
+  public void ensureMultipleInjectorsAreNotCreated() {
+    Person.counter = 0;
+    XmlSuite suite = createXmlSuite("sample_suite", "sample_test", SampleA.class, SampleB.class);
+    suite.setParentModule(AnotherParentModule.class.getCanonicalName());
+    TestNG testng = create(suite);
+    testng.run();
+    assertThat(AnotherParentModule.getCounter()).isEqualTo(1);
     assertThat(Person.counter).isEqualTo(1);
   }
 }
